<resources>
    <string name="app_name">MyApp01</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">INKA TEST APP01</string>
    <string name="nav_header_subtitle">appsealing@inka.co.kr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="APP_CLOSE_BACK_BUTTON">"뒤로 버튼을 한번 더 누르면 종료합니다.</string>
    <string name="menu_qrcreate">QRCode 생성</string>
    <string name="qrcode_input_text">QRCode를 생성할 문자열을 입력해 주세요</string>
    <string name="qrcode_prompt_text">사각형 안에 Barcode/QRcode를 넣어 스캔해 주세요</string>
    <string name="menu_qrcore_save">QRCODE 저장</string>
    <string name="menu_mqtt">채팅</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="chatting_server">채팅서버설정</string>
    <string name="chatting_server_addr">IP Address</string>
    <string name="chatting_server_port">Port</string>
    <string name="menu_ethereum">Ethereum</string>
    <string name="search">Search</string>
    <string name="search_hint">Search text</string>
    <string name="menu_freeboard">자유게시판</string>
</resources>
