<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_freeboard" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
    <item android:title="Communicate" >
        <menu>
            <item
                android:id="@+id/nav_qrcreate"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_qrcreate" />
            <item
                android:id="@+id/nav_mqtt"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/menu_mqtt" />
        </menu>
    </item>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_ethereum"
                android:icon="@drawable/ic_menu_ethereum"
                android:title="@string/menu_ethereum" />
        </menu>
    </item>
</menu>
